<resources>
    <string name="app_name">SDP Encryptor</string>
    <string name="errormessage">Message must contain letters</string>
    <string name="errorkey">Key Phrase must contain only letters</string>
    <string name="errorshift">Shift Number must be >= 1</string>

    <string name="fieldID1">messageInput</string>
    <string name="fieldID2">keyPhrase</string>
    <string name="fieldID3">shiftNumber</string>
    <string name="fieldID4">cipherText</string>
    <string name="buttonID">encryptButton</string>

</resources>
